增加登录功能，增加event bus

--- a/note/笔记.md
+++ b/note/笔记.md
@@ -6,3 +6,10 @@
   <artifactId>spring-boot-devtools</artifactId>
 </dependency>
 ```
+
+# 踩坑记1 logback的 property不能设置为空
+
+<property name="password" value="" />
+
+为空无法启动
+
