--- a/JavaSource/src/main/resources/i18n/messages_en.properties
+++ b/JavaSource/src/main/resources/i18n/messages_en.properties
@@ -9,3 +9,5 @@ name.repeat=Name already exist.
 no.permission=No Permission.
 
 config.not.exist=Config {0} not exist
+
+unsupport.file.format=unsupported file format
