--- a/JavaSource/src/main/resources/i18n/messages_zh_CN.properties
+++ b/JavaSource/src/main/resources/i18n/messages_zh_CN.properties
@@ -8,3 +8,5 @@ name.repeat=\u540D\u79F0\u5DF2\u7ECF\u5B58\u5728
 no.permission=\u6CA1\u6709\u6743\u9650
 
 config.not.exist=\u914D\u7F6E\u9879 {0} \u4E0D\u5B58\u5728
+
+unsupport.file.format=\u4E0D\u652F\u6301\u7684\u6587\u4EF6\u683C\u5F0F
