--- a/JavaSource/src/main/resources/i18n/messages_en.properties
+++ b/JavaSource/src/main/resources/i18n/messages_en.properties
@@ -5,9 +5,9 @@ id.error=Invalid id:{0}
 
 name.repeat=Name already exist.
 
-
 no.permission=No Permission.
 
 config.not.exist=Config {0} not exist
 
-unsupport.file.format=unsupported file format
+unsupport.file.format=Unsupported File Format
+password.invalid=Password Invalid
