--- a/JavaSource/src/main/resources/i18n/messages_zh_CN.properties
+++ b/JavaSource/src/main/resources/i18n/messages_zh_CN.properties
@@ -10,3 +10,5 @@ no.permission=\u6CA1\u6709\u6743\u9650
 config.not.exist=\u914D\u7F6E\u9879 {0} \u4E0D\u5B58\u5728
 
 unsupport.file.format=\u4E0D\u652F\u6301\u7684\u6587\u4EF6\u683C\u5F0F
+
+password.invalid=\u975E\u6CD5\u7684\u5BC6\u7801
