完善收藏代码

--- a/JavaSource/core/src/main/resources/i18n/messages_en.properties
+++ b/JavaSource/core/src/main/resources/i18n/messages_en.properties
@@ -1,4 +1,5 @@
 param.is.null=Param is null
+field.invalid= Filed Value Invalid
 name.is.null=Name is null
 value.is.null=Value is null
 id.error=Invalid id:{0}
