--- a/JavaSource/core/src/main/resources/i18n/messages_zh_CN.properties
+++ b/JavaSource/core/src/main/resources/i18n/messages_zh_CN.properties
@@ -1,4 +1,5 @@
 param.is.null=\u53C2\u6570\u4E3A\u7A7A
+field.invalid=\u5B57\u6BB5\u53D6\u503C\u9519\u8BEF
 name.is.null=\u540D\u79F0\u4E3A\u7A7A
 value.is.null=\u53D6\u503C\u4E3A\u7A7A
 id.error=\u975E\u6CD5\u7684id\uFF1A{0}
